@@ -1,9 +1,8 @@
 package com.yammer.breakerbox.service.core;
 
-import com.google.common.base.Function;
 import com.google.common.base.Optional;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
+import com.netflix.turbine.discovery.Instance;
 import com.yammer.breakerbox.service.tenacity.TenacityConfigurationFetcher;
 import com.yammer.breakerbox.store.BreakerboxStore;
 import com.yammer.breakerbox.store.DependencyId;
@@ -13,9 +12,12 @@ import com.yammer.tenacity.core.config.TenacityConfiguration;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.net.URI;
+import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class SyncComparator {
     private final TenacityConfigurationFetcher.Factory fetcherFactory;
@@ -27,69 +29,46 @@ public class SyncComparator {
         this.breakerboxStore = breakerboxStore;
     }
 
-    private Function<URI, InstanceConfiguration> funFetchConfiguration(final DependencyId dependencyId) {
-        return new Function<URI, InstanceConfiguration>() {
-            @Override
-            public InstanceConfiguration apply(URI input) {
-                return new InstanceConfiguration(input, fetcherFactory.create(input, dependencyId).queue());
-            }
-        };
-    }
-
-    private Function<InstanceConfiguration, SyncServiceHostState> funComputeSyncState(final TenacityConfiguration tenacityConfiguration) {
-        return new Function<InstanceConfiguration, SyncServiceHostState>() {
-            @Override
-            public SyncServiceHostState apply(InstanceConfiguration instanceConfiguration) {
-                try {
-                    if (instanceConfiguration.getTenacityConfiguration().isPresent()) {
-                        if (instanceConfiguration.getTenacityConfiguration().get().equals(tenacityConfiguration)) {
-                            return SyncServiceHostState.createSynchronized(instanceConfiguration.getUri());
-                        } else {
-                            return SyncServiceHostState.createUnsynchronized(instanceConfiguration.getUri());
-                        }
+    private static Function<InstanceConfiguration, SyncServiceHostState> funComputeSyncState(TenacityConfiguration tenacityConfiguration) {
+        return (instanceConfiguration) -> {
+            try {
+                if (instanceConfiguration.getTenacityConfiguration().isPresent()) {
+                    if (instanceConfiguration.getTenacityConfiguration().get().equals(tenacityConfiguration)) {
+                        return SyncServiceHostState.createSynchronized(Instances.toUri(instanceConfiguration.getInstance()));
+                    } else {
+                        return SyncServiceHostState.createUnsynchronized(Instances.toUri(instanceConfiguration.getInstance()));
                     }
-                } catch (InterruptedException | ExecutionException err) {
-                    LOGGER.warn("Failed to comparing configurations", err);
                 }
-                return SyncServiceHostState.createUnknown(instanceConfiguration.getUri());
+            } catch (InterruptedException | ExecutionException err) {
+                LOGGER.warn("Failed to comparing configurations", err);
             }
+            return SyncServiceHostState.createUnknown(Instances.toUri(instanceConfiguration.getInstance()));
         };
     }
 
-    private Function<InstanceConfiguration, SyncServiceHostState> funUnsynchronized() {
-        return new Function<InstanceConfiguration, SyncServiceHostState>() {
-            @Override
-            public SyncServiceHostState apply(InstanceConfiguration input) {
-                return SyncServiceHostState.createUnsynchronized(input.getUri());
-            }
-        };
+    private List<InstanceConfiguration> fetch(ServiceId serviceId, DependencyId dependencyId) {
+        return Instances
+                .instances(serviceId)
+                .stream()
+                .map((instance) -> new InstanceConfiguration(instance, fetcherFactory.create(instance, dependencyId).queue()))
+                .collect(Collectors.toList());
     }
 
-    private ImmutableList<InstanceConfiguration> fetch(ServiceId serviceId, DependencyId dependencyId) {
-        return FluentIterable
-                .from(Instances.propertyKeyUris(serviceId))
-                .transform(funFetchConfiguration(dependencyId))
-                .toList();
-    }
-
-    public ImmutableList<SyncServiceHostState> inSync(ServiceId serviceId, DependencyId dependencyId) {
-        // fetch from services
-        final ImmutableList<InstanceConfiguration> configurations = fetch(serviceId, dependencyId);
+    public List<SyncServiceHostState> inSync(ServiceId serviceId, DependencyId dependencyId) {
+        final List<InstanceConfiguration> configurations = fetch(serviceId, dependencyId);
         
         final Optional<DependencyModel> entityOptional = breakerboxStore.retrieveLatest(dependencyId, serviceId);
         if (entityOptional.isPresent()) {
-
             final DependencyModel entity = entityOptional.get();
-            return FluentIterable
-                    .from(configurations)
-                    .transform(funComputeSyncState(entity.getTenacityConfiguration()))
-                    .toList();
+            return configurations
+                    .stream()
+                    .map(funComputeSyncState(entity.getTenacityConfiguration()))
+                    .collect(Collectors.toList());
         }
-        //TODO 08-28-13 cgray: What if services are in sync with each other, but there is no breakerbox configuration?
-        return FluentIterable
-                .from(configurations)
-                .transform(funUnsynchronized())
-                .toList();
+        return configurations
+                .stream()
+                .map((instance) -> SyncServiceHostState.createUnsynchronized(Instances.toUri(instance.getInstance())))
+                .collect(Collectors.toList());
     }
 
     public ImmutableList<SyncPropertyKeyState> allInSync(ServiceId serviceId, Iterable<String> propertyKeys) {
@@ -118,20 +97,38 @@ public class SyncComparator {
     }
 
     private static class InstanceConfiguration {
-        private final URI uri;
+        private final Instance instance;
         private final Future<Optional<TenacityConfiguration>> tenacityConfiguration;
 
-        private InstanceConfiguration(URI uri, Future<Optional<TenacityConfiguration>> tenacityConfiguration) {
-            this.uri = uri;
+        private InstanceConfiguration(Instance instance, Future<Optional<TenacityConfiguration>> tenacityConfiguration) {
+            this.instance = instance;
             this.tenacityConfiguration = tenacityConfiguration;
         }
 
-        private URI getUri() {
-            return uri;
+        public Instance getInstance() {
+            return instance;
         }
 
         private Optional<TenacityConfiguration> getTenacityConfiguration() throws InterruptedException, ExecutionException {
             return tenacityConfiguration.get();
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(instance, tenacityConfiguration);
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (this == obj) {
+                return true;
+            }
+            if (obj == null || getClass() != obj.getClass()) {
+                return false;
+            }
+            final InstanceConfiguration other = (InstanceConfiguration) obj;
+            return Objects.equals(this.instance, other.instance)
+                    && Objects.equals(this.tenacityConfiguration, other.tenacityConfiguration);
         }
     }
 }
